Feature/portfolio diff covers (#740)
* WIP: some account of bittrex

* fix tests

* small change

* small change

* WIP healthy wallet

* wip

* fix test

* wip

* wip: for bittrex pair picker

* wip: for bittrex pair picker, transition pairs

* WIP: suggested trade stats on ReserveCover

* WIP: creating cover for ReservesCover

* WIP: ResercesCoverSettings

* execute covers task

* merge migrations

* make standard get_main_address for all wallets

* ReserveCover create order

* WIP: sove ReserveCOvers tests

* WIP: test ReserveCover execution

* direct, revers ReserveCover tests cases

* WIP: settings currencies test

* some tests for better coverage

* fix account fixtures

* add USDT Bittrex account

* migration fix

--- a/wercker.yml
+++ b/wercker.yml
@@ -161,7 +161,7 @@ dev:
           npm run build-dev &
           npm run watch &
           tail -n 50 -f /var/log/*.log &
-          newrelic-admin run-program python manage.py runserver_plus 0.0.0.0:8000
+          newrelic-admin run-program python manage.py runserver 0.0.0.0:8000
         reload: false
 
 build:
