--- a/nginx.conf
+++ b/nginx.conf
@@ -77,9 +77,9 @@ http {
     }
 
     # Django media
-    location /media  {
-        alias /usr/share/nginx/html/media;  # Django project's media files - mounted as a volume in the container
-    }
+    # location /media  {
+    #     alias /usr/share/nginx/html/media;  # Django project's media files - mounted as a volume in the container
+    # }
 
     location /static {
         alias /usr/share/nginx/html/static; # Django project's static files - also mounted in the container
