Feature/exchange tokens (#761)
* WIP fixtures, adapters

* WIP huobi adapter

* WIP huobi token little update

* fixtures, token fees the same as BDG (except BNT), risk_management fixtures

* pairs added to tests, pairs pk changes, adapters changes, mocks for adapters

* COSS and HT coin selector to frontend, pairs exportation in wercker

* hitbtc ticker add to BDG

* order amount mock

--- a/wercker.yml
+++ b/wercker.yml
@@ -113,6 +113,11 @@ dev:
           python manage.py loaddata core/fixtures/pairs_kcs.json
           python manage.py loaddata core/fixtures/pairs_bnb.json
           python manage.py loaddata core/fixtures/pairs_knc.json
+          python manage.py loaddata core/fixtures/pairs_ht.json
+          python manage.py loaddata core/fixtures/pairs_bix.json
+          python manage.py loaddata core/fixtures/pairs_bnt.json
+          python manage.py loaddata core/fixtures/pairs_coss.json
+          python manage.py loaddata core/fixtures/pairs_cob.json
     - script:
         name: Django import Payment Methods fixture
         code: |
@@ -494,6 +499,11 @@ build:
           python manage.py loaddata core/fixtures/pairs_kcs.json
           python manage.py loaddata core/fixtures/pairs_bnb.json
           python manage.py loaddata core/fixtures/pairs_knc.json
+          python manage.py loaddata core/fixtures/pairs_ht.json
+          python manage.py loaddata core/fixtures/pairs_bix.json
+          python manage.py loaddata core/fixtures/pairs_bnt.json
+          python manage.py loaddata core/fixtures/pairs_coss.json
+          python manage.py loaddata core/fixtures/pairs_cob.json
 
           if [ ! -z $CMS_FROM_FIXTURE] && [ ${CMS_FROM_FIXTURE} -eq 1 ]
           then
