--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commonjs-highcharts": "^4.0.3",
     "cryptocoins-icons": "2.1.0",
     "css-loader": "^0.26.2",
+    "dredd": "4.2.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "font-awesome": "^4.7.0",
@@ -33,23 +34,22 @@
     "node-sass": "^4.5.0",
     "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "resolve": "1.6.0",
     "resolve-url-loader": "2.0.0",
     "select2": "^4.0.3",
     "style-loader": "^0.13.2",
     "toastr": "^2.1.2",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-bundle-tracker": "^0.2.0",
-    "x-editable": "^1.5.1",
     "watchify": "3.9.0",
-    "dredd": "4.2.1",
-    "resolve": "1.6.0"
+    "webpack": "^2.2.1",
+    "webpack-bundle-tracker": "^0.3.0",
+    "x-editable": "^1.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.23.0",
-    "htmllint-cli": "0.0.5",
+    "htmllint-cli": "0.0.7",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
@@ -60,9 +60,9 @@
     "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "node-sass": "^4.5.0",
+    "node-sass": "4.9.0",
     "phantomjs": "^2.1.7",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "1.3.1",
     "sass": "^0.5.0",
     "sass-loader": "^6.0.2",
     "webpack": "^2.2.1",
