--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-debug-toolbar>=1.5
 django-phonenumber-field>=1.1.0
 django-safedelete==0.3.3
 djangorestframework>=3.4.4
+djangorestframework-xml>=1.3.0
 flake8>=3.0.4
 pycodestyle==2.3.1
 gunicorn>=19.6.0
