--- a/package.json
+++ b/package.json
@@ -5,25 +5,16 @@
   "dependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "1.7.0",
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.7",
-    "bootstrap-social": "^5.1.1",
     "bootstrap-toggle": "^2.2.2",
     "browserify": "<14",
-    "card": "^2.1.1",
-    "clipboard": "^1.6.1",
-    "commonjs-highcharts": "^4.0.3",
-    "cryptocoins-icons": "2.1.0",
     "css-loader": "^0.26.2",
-    "dredd": "4.2.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "font-awesome": "^4.7.0",
-    "highcharts": "^5.0.7",
-    "highcharts-more": "0.1.2",
-    "intl-tel-input": "^11.0.4",
     "jquery": "^1.11.3",
     "jquery-ui": "^1.11.3",
     "jquery-validation": "^1.16.0",
@@ -36,7 +27,6 @@
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "resolve": "1.6.0",
     "resolve-url-loader": "2.0.0",
-    "select2": "^4.0.3",
     "style-loader": "^0.13.2",
     "toastr": "^2.1.2",
     "url-loader": "^0.5.8",
@@ -49,17 +39,9 @@
     "babel-cli": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.23.0",
+    "dredd": "^5.1.10",
     "htmllint-cli": "0.0.7",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
-    "karma": "^0.13.22",
-    "karma-browserify": "latest",
-    "karma-cli": "~1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-jquery": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
     "node-sass": "4.9.0",
     "phantomjs": "^2.1.7",
     "react-hot-loader": "1.3.1",
@@ -69,7 +51,6 @@
     "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
-    "test": "karma start --single-run",
     "build": "webpack --config webpack.config.js",
     "build-dev": "webpack --config webpack.config.dev.js --devtool source-map",
     "watch": "webpack --watch --config webpack.config.dev.js",
