--- a/wercker.yml
+++ b/wercker.yml
@@ -118,6 +118,7 @@ dev:
           python manage.py loaddata core/fixtures/pairs_bnt.json
           python manage.py loaddata core/fixtures/pairs_coss.json
           python manage.py loaddata core/fixtures/pairs_cob.json
+          python manage.py loaddata core/fixtures/pairs_bmh.json
     - script:
         name: Django import Payment Methods fixture
         code: |
@@ -505,6 +506,7 @@ build:
           python manage.py loaddata core/fixtures/pairs_bnt.json
           python manage.py loaddata core/fixtures/pairs_coss.json
           python manage.py loaddata core/fixtures/pairs_cob.json
+          python manage.py loaddata core/fixtures/pairs_bmh.json
 
           if [ ! -z $CMS_FROM_FIXTURE] && [ ${CMS_FROM_FIXTURE} -eq 1 ]
           then
