Feature/gas price parameters (#838)
* new model TransactionPrice, transaction_price.json fixture, migrations and rpc_gas_price from model

* OMNI gas price added

* validations, from wei to Gwei, type added to model

* mistake in function call to get_amount_wei() -> get_amount_btc for omni

* merge migrations

* amount_wei and amount_btc added property, type -> algo

* algo model, foreign keys from currency and transactionprice, new currency_algorithm.json fixture

* check tx_price and currency_algo pks test

* admin views for TransactioPrice and CurrencyAlgorithm

--- a/wercker.yml
+++ b/wercker.yml
@@ -85,6 +85,8 @@ dev:
         name: Django import Currency fixture
         code: |
           python manage.py loaddata core/fixtures/market.json
+          python manage.py loaddata core/fixtures/currency_algorithm.json
+          python manage.py loaddata core/fixtures/transaction_price.json
           python manage.py loaddata core/fixtures/currency_crypto.json
           python manage.py loaddata core/fixtures/currency_fiat.json
           python manage.py loaddata core/fixtures/currency_tokens.json
@@ -486,6 +488,8 @@ build:
           python /usr/src/app/manage.py migrate
           # Import fixtures
           python /usr/src/app/manage.py loaddata core/fixtures/market.json
+          python /usr/src/app/manage.py loaddata core/fixtures/currency_algorithm.json
+          python /usr/src/app/manage.py loaddata core/fixtures/transaction_price.json
           python /usr/src/app/manage.py loaddata core/fixtures/currency_crypto.json
           python /usr/src/app/manage.py loaddata core/fixtures/currency_fiat.json
           python /usr/src/app/manage.py loaddata core/fixtures/currency_tokens.json
