Feature/kyc status change notifications (#852)
* verification status changing catching and calling notify user

* notifying using django.signals

* apps and signals added to verification

* WIP get all documents by relations verificatin.verification_documents

* WIP some verification tests

* for now sends two emails if different types of documents were rejected

* test notify on tier update

* 1 migration, working email sending, tests, email_log to requirements

* migration delete, tests changes, check documents from PaymentPreference

* migration merge

* remove VerificationEmail model, delete migration, notify goes to PaymentPreference

* check pending documents longer than 1 day and test for it

* datetime.datetime fix

* change user_email func logic

* VerificationBaseTestCase added

* some empty lines deleted

* add legacy field util_status and id_status in has_pending_docs property

--- a/requirements.txt
+++ b/requirements.txt
@@ -68,3 +68,4 @@ qrcode==6.0
 git+git://github.com/vvangelovski/django-audit-log.git@0a3b1a03b2ce0b560859cefab00bdd2af6641d59
 rlp==0.6.0
 django-newsletter==0.7
+django-email-log==0.2.0
