Feature/order book (#868)
* orders/models.py --> orders/models/instant.py refactoring

* Order(instant) Inherits BaseOrder

* AuthStampedModel to BaseOrder

* WIP: LimitOrder scaffold

* WIP: limitorder migrations + fixed tests

* skip unfinished tests

* skip more unfinished tests

* calculate limit order

* WIP: create Trade with limit_order.process()

* serializer folder for order

* api_views folder for order

* bas api_view for order

* base serializers for order

* WIP: POST limit_order

* deposit address to LimitOrder

* fix migrations

* fix cards reserve task test

* WIP: some wip work

* limit_order.filled property(how much is traded)

* closed_order_amounts

* WIP: status and book_status fields on limit_order

* WIP: process order after transaction import

* remove orders utils send_money - legacy, unuses, and untested

* remove unused (orders.utils.send_money) code patch

* WIP: limit_order.close() transition

* WIP: limit_order statuses validation

* WIP: set limit_orders as PAID

* WIP: release LimitOrder

* payment.limit_prder for the bright future (and some legacy code fixes)

* fix comments

* WIP: COMPLETED limit_order

* add ordermodel model, fix admin and some small things

* save OrderBook object to picklefiled

* cleanup migrations

* fix phonenumber field version

* code cleaning

* apiary limit_order POST documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django==2.0.7
 django-bootstrap3>=7.0.1
 django-cors-headers>=2.4.0
 django-debug-toolbar==1.9
-django-phonenumber-field>=1.1.0
+django-phonenumber-field==2.0.1
 django-safedelete==0.3.3
 djangorestframework>=3.8.2
 djangorestframework-xml>=1.3.0
@@ -69,3 +69,6 @@ git+git://github.com/vvangelovski/django-audit-log.git@0a3b1a03b2ce0b560859cefab
 rlp==0.6.0
 django-newsletter==0.7
 django-email-log==0.2.0
+bintrees==2.0.7
+-e git+https://github.com/dyn4mik3/OrderBook.git#egg=orderbook
+django-picklefield===1.1.0
