--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-phonenumber-field==2.0.1
 django-safedelete==0.3.3
 djangorestframework>=3.8.2
 djangorestframework-xml>=1.3.0
-flake8>=3.0.4
+flake8==3.6.0
 pycodestyle==2.3.1
 gunicorn>=19.6.0
 ipdb>=0.10.1
