Ethash.assert_tx_unique (#922)
* assert_tx_unique method in eth rpc client and test in test_e2e

* move test to test_ethash, add some _list_txs mocks

* tests moved, simplified

* on more mock

* wercker new env parameter export ETHERSCAN_API_KEY, request etherscan using API KEY

* assert_tx_unique check tokens txs, test added

* expired card in tests

--- a/wercker.yml
+++ b/wercker.yml
@@ -368,6 +368,8 @@ build:
           # Idenfy
           export IDENFY_API_KEY=${IDENFY_API_KEY}
           export IDENFY_API_SECRET=${IDENFY_API_SECRET}
+          # Ethersan
+          export ETHERSCAN_API_KEY=${ETHERSCAN_API_KEY}
           # Fixer (fiat rates)
           export FIXER_ACCESS_KEY=${FIXER_ACCESS_KEY}
           # Smtp
