void-idenfy-after-x-minutes (#907)
* void-idenfy-after-x-minutes

* recommit my first commit after modyifing return_identity_token field

* WIP: add scaffold for the idenfy token void case

* fix requirements.txt

* Using gettattr instead of os.getenv plus striping some blank lines

* deleting =2.11.1 =2.13.0 =3.8.2

* Done with lint and create test_VoidIdenfy function

* mock freeze time with test_void_idenfy

* remove set trace line

* Modifying Freeze time and move move_order_status_up before Freezing

* Adjusting the task and test_task

* Improve some code styling and Add unchanged test case

* Excluding the crypto orders from Idenfy void function

* Adding None proof case plus modifying the db query

* add task to queue and some cleaning

--- a/wercker.yml
+++ b/wercker.yml
@@ -426,6 +426,9 @@ build:
           export RPC6_PUBLIC_KEY_C1=${RPC6_PUBLIC_KEY_C1}
           export RPC_RPC6_K=${RPC_RPC6_K}
 
+          # Idenfy settings
+          export IDENFY_VOID_AFTER_MINUTES=${IDENFY_VOID_AFTER_MINUTES}
+
           #RPC7
           export RPC_RPC7_USER=${RPC_RPC7_USER}
           export RPC_RPC7_PORT=${RPC_RPC7_PORT}
