audit log fixes (#929)
* assert_tx_unique and test ofr it

* test updates

* assert_tx_unique and test

* mock list txs in test_e2d

* blake2 assert_tx_unique and test

* ripple assert_tx_unique and test

* WIP: first changes

* WIP ethas rpc methods

* WIP: more coins checked

* XMR get_transfer method get kwargs param

* WIP audit task

* generalising tx keys

* mock scrypt _list_txs in test_release_order test

* WIP tests, tasks

* sus txs categories fixture, wercker line to loaddata

* tests for ceveral currencies, task fixed

* test for ripple, changes in task

* xmr return empty dict for now

* making _list_txs more general

* ethash updated on last fixes

* omni _list_txs generalisation

* cryptonight and omni

* blake2 test mock

* adding kwargs to all _list_txs methods

* tx_count kwarg moving to **kwargs

* ethash tests fixed for assert tx

* updating task

* tasks, tests working

* migration file added

* more changes, deleted migration

* filtering added to admin, currency has_suspicious_txs method added

* splitting to methods

* more splitting to methods, some lints ignored, migration file

* tests changed to cover more code

* some fixes and test to cover more task code

* get client from Api Client Factory

--- a/wercker.yml
+++ b/wercker.yml
@@ -517,6 +517,7 @@ build:
           # Apply migrations
           python /usr/src/app/manage.py migrate
           # Import fixtures
+          python /usr/src/app/manage.py loaddata audit/fixtures/suspicious_transactions_categories.json
           python /usr/src/app/manage.py loaddata core/fixtures/market.json
           python /usr/src/app/manage.py loaddata core/fixtures/currency_algorithm.json
           python /usr/src/app/manage.py loaddata core/fixtures/transaction_price.json
